--- a/ProyectoSIGNDVC/ProyectoSIGNDVC/Views/Pago/ListaNomina.cshtml
+++ b/ProyectoSIGNDVC/ProyectoSIGNDVC/Views/Pago/ListaNomina.cshtml
@@ -1,4 +1,4 @@
-﻿
+﻿@model ProyectoSIGNDVC.Models.ViewModel
 @{
     ViewBag.Title = "ListaNomina";
     Layout = "~/Views/Templates/_TemplateIndex.cshtml";
@@ -15,7 +15,9 @@
 </div>
 
 <div class="row">
-    <div class="col-lg-12">
+    <div class="col-lg-10">
+    </div>
+    <div class="col-lg-2">
         <a href="/Pago/PagoNomina" class="btn btn-success boton-tabla pull-right">Agregar</a>
     </div>
 </div>
@@ -27,21 +29,73 @@
                 Lista de Nominas
             </div>
             <!-- /.panel-heading -->
-            <center class="panel-body">
-                <table width="100%" class="table table-striped table-bordered table-hover" id="dataTables-example">
+            <div class="panel-body">
+                <table  class="table table-striped table-bordered table-hover" id="dataTables-example">
                     <thead>
                         <tr>
-                            <th>Código de nomina</th>
-                            <th>Fecha</th>
+                            <th>Código de Nomina</th>
+                            <th>Fecha de Emision</th>                           
                             <th>Estatus</th>
-                            <th>Opciones</th>
+                            <th>Fecha de Aprobacion</th>
+                            <th>Aprobar</th>
+                            <th>Ver</th>
                         </tr>
                     </thead>
                     <tbody>
-                        <tr class="odd gradeX"></tr>
+                        @foreach (var nomina in Model.nominas)
+                        {
+                            <tr class="odd gradeX">
+                                <td>@nomina.NominaID</td>
+                                <td>@nomina.fecha_emision</td>
+                                <td>
+                                    @if (nomina.fecha_aprobacion == null)
+                                    {
+                                        <p>No Aprobada</p>
+
+                                    }
+                                    else
+                                    {
+                                        <p>Aprobada</p>
+                                    }
+                                </td>
+                                <td>
+                                    @if (nomina.fecha_aprobacion == null)
+                                    {
+                                        <p>No Aprobada</p>
+
+                                    }
+                                    else
+                                    {
+                                        <p>@nomina.fecha_aprobacion</p>
+                                    }
+                                </td>
+                                <td >
+                                    <center>
+                                        @if (nomina.fecha_aprobacion == null)
+                                        {
+
+                                            <a style="color:#5cb85c;" href="/Pago/AprobarNomina?nominaid=@nomina.NominaID" onclick="return confirm('Estas seguro de aprobar la nomina?')" class="fa fa-check fa-fw"></a>
+
+                                        }
+                                        else{ 
+                                          <p>Sin Accion</p>
+                                        }
+                                    </center>
+
+                                </td>
+                                <td>
+                                    <center>
+                                        <a href="/Pago/VerNomina?nominaid=@nomina.NominaID" class="fa fa-search"></a>     
+                                    </center>
+                                </td>
+                            </tr>
+
+                        }
+                        
 
                     </tbody>
                 </table>
+                </div>
                 <!-- /.table-responsive
                 <div class="well">
                     <h4>DataTables Usage Information</h4>
