--- a/ProyectoSIGNDVC/ProyectoSIGNDVC/Views/Configuration/TablaUsuarios.cshtml
+++ b/ProyectoSIGNDVC/ProyectoSIGNDVC/Views/Configuration/TablaUsuarios.cshtml
@@ -19,7 +19,7 @@
     </div>
 </div>
 
-<div class="row" ng-controller="usuarioCtrl">
+<div class="row">
     <div class="col-lg-12">
         <div class="panel panel-default">
             <div class="panel-heading">
@@ -39,19 +39,24 @@
                         </tr>
                     </thead>
                     <tbody>
-                        <tr class="odd gradeX" ng-repeat="usuario in usuarios">
-                            <td>{{usuario.Empleado.EmpleadoID}}</td>
-                            <td>{{usuario.Empleado.Persona.nombre +" "+usuario.Empleado.Persona.apellido}}</td>
-                            <td>{{usuario.Empleado.Persona.fecha_nacimiento | date}}</td>
-                            <td>{{usuario.usuario}}</td>
-                            <td>{{usuario.clave}}</td>
+                        @foreach (var usuario in Model.usuarios)
+                        {
+
+                       
+                        <tr class="odd gradeX">
+                            <td>@usuario.Empleado.EmpleadoID</td>
+                            <td>@(usuario.Empleado.Persona.nombre +" "+usuario.Empleado.Persona.apellido)</td>
+                            <td>@usuario.Empleado.Persona.fecha_nacimiento</td>
+                            <td>@usuario.usuario</td>
+                            <td>@usuario.clave</td>
                             <td>
                                 <center>
-                                    <a href="/Configuration/EditarUsuario/?usuario={{usuario.usuario}}" title="Editar"><span class="fa fa-pencil fa-fw" aria-hidden="true"></span></a>
-                                    <a href="" title="Eliminar"><span style="color: red;" class="fa fa-close fa-fw" aria-hidden="true" ng-click="deleteUsuario(usuario)"></span></a>
+                                    <a href="/Configuration/EditarUsuario?usuario=@usuario.usuario" title="Editar"><span class="fa fa-pencil fa-fw" aria-hidden="true"></span></a>
+                                    <a href="" title="Eliminar"><span style="color: red;" class="fa fa-close fa-fw" aria-hidden="true" ></span></a>
                                 </center>
                             </td>
                         </tr>
+                        }
                         <tr class="odd gradeX">
                             <td>0001</td>
                             <td>José Rodríguez</td>
