--- a/ProyectoSIGNDVC/ProyectoSIGNDVC/Views/Pago/VerPago.cshtml
+++ b/ProyectoSIGNDVC/ProyectoSIGNDVC/Views/Pago/VerPago.cshtml
@@ -20,18 +20,18 @@
             </div>
         </div>
         <div>
-            <p style='background-color: #45454;text-align: center'>Ha Recibido del <span style='font-weight: bold'>DIVIDENDO VOLUNTARIADO PARA LA COMUNIDAD</span>, por concepto de salario correspondiente a la @if (Model.pago.f_pago.Day > 15) {<span>2da</span> } else { <span>1ra</span> } Quincena de  .</p>
+            <p style='background-color: #45454;text-align: center'>Ha Recibido del <span style='font-weight: bold'>DIVIDENDO VOLUNTARIADO PARA LA COMUNIDAD</span>, por concepto de salario correspondiente a la @if (Model.pago.f_pago.Day > 15) {<span>2da</span> } else { <span>1ra</span> } Quincena de @(Model.mes +" "+ Model.desde.Year)  .</p>
             <div style='overflow: hidden;text-align: right;' width='100%'>
                 <div style='float: left; width: 50% !important; ' width='50%' height='100px'>
                     <p>SALARIO</p> <p>RETROACTIVO</p><p style='text-decoration: underline;font-weight: bold'>DEDUCCIONES</p> <p>S.S.O</p> <p>R.P.E</p> <p>F.A.O.V</p> <p>I.N.C.E.S</p> <p>PRESTAMOS</p> <p>I.S.L.R</p> <p style='margin-bottom:0px'>POLIZA HCM</p> <p style='font-weight: bold;margin-top:0px'>TOTAL DEDUCCIONES</p> <p>NETO</p>
                 </div>
                 <div style='float: left; text-align: center; width: 50% !important;' width='50%' height='100px'>
                     <div style='width: 50% !important;margin-left: 10px;'>
-                        <p>@Model.empleado.sueldo</p><p>RETROACT</p><p>@Model.empleado.Retenciones</p><p>@Model.empleado.SSO</p><p>@Model.empleado.RPE</p><p>@Model.empleado.FAOV</p><p>@Model.empleado.INCES</p><p>0,00</p><p style='border-bottom: 1px solid black;margin-bottom:0px'>@Model.empleado.costoCargas</p><p style='margin-top: 0px'>0,00</p><p style='border-top: 1px solid black;'>@Model.empleado.MontoTotal</p>
+                        <p>@Model.pago.sueldo</p><p>@Model.pago.retroactivos</p><p>@Model.pago.Retenciones</p><p>@Model.pago.SSO</p><p>@Model.pago.RPE</p><p>@Model.empleado.FAOV</p><p>@Model.empleado.INCES</p><p>@Model.pago.prestamos</p><p style='border-bottom: 1px solid black;margin-bottom:0px'>@Model.empleado.costoCargas</p><p style='margin-top: 0px'>0,00</p><p style='border-top: 1px solid black;'>@Model.empleado.MontoTotal</p>
                     </div>
                 </div>
             </div>
-            <p style='text-align: center'>Este monto fue abonado en la cuenta del Banco De Venezuela N# <span style='font-weight: bold'>0000-00000-000000-00000000</span></p><p style='text-align: center;font-weight: bold'>Fecha: 9/10/2017 11:47:31 AM</p>
+            <p style='text-align: center'>Este monto fue abonado en la cuenta del @Model.empleado.Banco N# <span style='font-weight: bold'>@Model.empleado.N_Cuenta</span></p><p style='text-align: center;font-weight: bold'>Fecha: @Model.desde</p>
         </div>
     </div>
 </div>
